Fixed UI bug where datepicker was covered by navbar

--- a/foodmap_app/static/css/styles.css
+++ b/foodmap_app/static/css/styles.css
@@ -18,7 +18,7 @@
 
 body {
     margin: 0;
-    padding-top: 70px;
+    padding-top: 110px;
 }
 
 .overlay-control {
@@ -232,7 +232,4 @@ span.fa.fa-map-marker:before {
     padding-left: 50px;
   }
 }
-
-
-
 
